@@ -1,8 +1,12 @@
 libpqxx (2.1.3-1) stable; urgency=low
 
   * New upstream release.
+  * Switched to using the new library versioning scheme with
+    package version string in the library DT_SONAME.  This
+    requires preprocessing of debian/control, and versioned
+    symlinks are created at build time.
 
- -- Jeroen T. Vermeulen <jtv@xs4all.nl>  Fri, 21 Nov 2003 19:30:00 +0100
+ -- Roger Leigh <rleigh@debian.org>  Sat,  6 Dec 2003 20:09:44 +0000
 
 libpqxx (2.0.0-1) unstable; urgency=low
 
